--- a/templates/base.html
+++ b/templates/base.html
@@ -64,43 +64,51 @@
                     Sistema de Gestão de Contas
                 </a>
 
-                <div class="navbar-nav ms-auto">
-                    <!--a class="nav-link" href="/resumo">
-                        <i class="bi bi-bar-chart me-1"></i>
-                        Resumo
-                </a-->
-                    <a class="nav-link" href="/rateio">
-                        <i class="bi bi-pie-chart me-1"></i>
-                        Rateio
-                    </a>
-                    <a class="nav-link" href="/pagamentos">
-                        <i class="bi bi-credit-card me-1"></i>
-                        Pagamentos
-                    </a>
+                <!-- Toggle button for mobile -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="/listagens">
-                            <i class="bi bi-list-ul me-2"></i>Listagens
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/nova_despesa">
-                            <i class="bi bi-plus-circle me-2"></i>Nova Despesa
-                        </a>
-                    </li>
-
-                    <a class="nav-link" href="/pendentes">
-                        <i class="bi bi-clock-history me-1"></i>
-                        Pendentes
-                    </a>
-                    <a class="nav-link" href="/upload">
-                        <i class="bi bi-upload me-1"></i>
-                        Upload
-                    </a>
-                    <a class="nav-link" href="/fontes">
-                        <i class="bi bi-gear me-1"></i>
-                        Fontes
-                    </a>
+                <!-- Collapsible navbar content -->
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/rateio">
+                                <i class="bi bi-pie-chart me-1"></i>
+                                Rateio
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/pagamentos">
+                                <i class="bi bi-credit-card me-1"></i>
+                                Pagamentos
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/listagens">
+                                <i class="bi bi-list-ul me-1"></i>
+                                Listagens
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/nova_despesa">
+                                <i class="bi bi-plus-circle me-1"></i>
+                                Nova Despesa
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/pendentes">
+                                <i class="bi bi-clock-history me-1"></i>
+                                Pendentes
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/dados">
+                                <i class="bi bi-database me-1"></i>
+                                Dados
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
@@ -110,7 +118,7 @@
 
         <!-- JavaScript personalizado -->
         <script src="{{ url_for('static', filename='js/app.js') }}"></script>
-        
+
         {% block extra_js %}{% endblock %}
     </body>
 </html>
